--- a/po/de.po
+++ b/po/de.po
@@ -24,15 +24,15 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=chronojump&keywords=I18N+L10N&component=general\n"
 "POT-Creation-Date: 2014-01-26 07:31+0000\n"
-"PO-Revision-Date: 2014-01-26 17:41+0100\n"
-"Last-Translator: Benjamin Steinwender <b@stbe.at>\n"
+"PO-Revision-Date: 2014-08-15 17:36+0100\n"
+"Last-Translator: Christian Kirbach <christian.kirbach@gmail.com>\n"
 "Language-Team: Deutsch <gnome-de@gnome.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.6.3\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: ../CesarPlayer/Capturer/FakeCapturer.cs:81
 msgid "Fake live source"
@@ -5459,7 +5459,7 @@ msgid ""
 "<i>used</i>)."
 msgstr ""
 "Falls es nicht funktioniert, versuchen Sie COM1 - COM4 zu wählen (diese "
-"werden üblicherweise nicht wirklich <i>benutzt</b>)"
+"werden üblicherweise nicht wirklich <i>benutzt</i>)"
 
 #: ../src/gui/jump.cs:69
 msgid "jump"
